src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__library_ui_tests__tests__snapshot_tests__library_ui_renders_with_series.snap
---
source: src/ui/sonarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title                            Year    Network       Status    Rating     Type       Quality Profile    Language      Size        Monitored  Tags               
=> Breaking Bad                     2008    AMC           Ended                Standard   HD-1080p           English       0.00 GB     🏷                             
   The Wire                         2002    HBO           Continuin            Standard   Any                English       0.00 GB     🏷
