src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__library_ui_tests__tests__snapshot_tests__sonarr_library_SearchSeries.snap
---
source: src/ui/sonarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title ▼                          Year    Network       Status    Rating     Type       Quality Profile    Language      Size        Monitored  Tags               
=> Test                             2022    HBO           Continuin TV-MA      Standard   Bluray-1080p       English       59.51 GB    🏷                             
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                           ╭─────────────────  Search  ──────────────────╮                                                           
                                                           │series search                                │                                                           
                                                           ╰─────────────────────────────────────────────╯
